src/stylesheets/login.scss
@use "variables";

div.login-container {
	height: 90vh;
	width: 90vw;
	display: flex;
	justify-content: center;
	align-items: center;

	div.login-window {
		display: grid;
		padding: 2em;
		grid-template-areas:
			"error     error"
			"firstname firstname"
			"lastname  lastname"
			"create    login";
		border: 3px solid variables.$color10;
		border-radius: 1em;

		p.login-error {
			grid-area: error;
			margin-top: -1em;
			font-size: 0.7em;
			color: red;
		}

		div.name-container {
			margin: 0.5em;
			display: flex;
			justify-content: space-between;
			&.first {
				grid-area: firstname;
			}

			&.last {
				grid-area: lastname;
			}

			input {
				margin-left: 0.5em;

				&:focus {
					outline: none;
				}
			}
		}

		button {
			margin: 1em;
			margin-bottom: 0;
			padding: 0.7em;
			cursor: pointer;
			border: none;
			border-radius: 0.3em;

			&.create-student {
				grid-area: create;
				background-color: variables.$color4;
			}
			&.login-student {
				grid-area: login;
				background-color: variables.$color10;
			}
		}
	}
}

